Dockerize Vue app
- put Vue.js front in a container with a very simple http server.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,12 @@ services:
             - postgres
         networks:
             - sanic
+    frontend:
+        build: ./frontend/crud
+        ports:
+            - "8080:8080"
+        networks:
+            - sanic
 
 volumes:
     pg-data:
