--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
             - "5432:5432"
         volumes:
             - pg-data:/var/lib/postgresql/data
+            - ./data:/initial_data
         networks:
           - sanic
 
